--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </header>
       <section>
 
-        <p>Introduction about me</p>
+        <p>I'm Yawen, a research scientist at <a href="https://mineral.ai/" target="_blank">Mineral.ai</a> (a project graduated from Google X). I'm excited to work on research problems at the intersection of AI and agriculture. I graduated with a Ph.D. in computer science from the <a href="https://www.colorado.edu/" target="_blank">University of Colorado Boulder</a>, where I was advised by <a href="https://home.cs.colorado.edu/~lv/" target="_blank">Qin Lv</a>.</p>
 
         
 
-        <h2>Selected Publications</h2>
+        <!-- <h2>Selected Publications</h2> -->
 
-        <p>TODO</p>
+        <p>My latest publications are at<a href="https://scholar.google.com/citations?user=PIEw4UMAAAAJ&hl=en" target="_blank">Google Scholar</a>.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
