--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
       </header>
       <section>
 
-        <p>I'm Yawen, a research scientist at <a href="https://mineral.ai/" target="_blank">Mineral.ai</a> (a project graduated from Google X). I'm excited to work on research problems at the intersection of AI and agriculture. I graduated with a Ph.D. in computer science from the <a href="https://www.colorado.edu/" target="_blank">University of Colorado Boulder</a>, where I was advised by <a href="https://home.cs.colorado.edu/~lv/" target="_blank">Qin Lv</a>.</p>
-
-        
+        <p>I'm Yawen, a research scientist at <a href="https://mineral.ai/" target="_blank">Mineral.ai</a> (a project graduated from <a href="https://x.company/" target="_blank">Google X</a>). I'm excited to work on research problems at the intersection of AI and agriculture. I graduated with a Ph.D. in computer science from the <a href="https://www.colorado.edu/" target="_blank">University of Colorado Boulder</a>, where I was advised by <a href="https://home.cs.colorado.edu/~lv/" target="_blank">Qin Lv</a>.</p>
 
         <!-- <h2>Selected Publications</h2> -->
 
-        <p>My latest publications are at<a href="https://scholar.google.com/citations?user=PIEw4UMAAAAJ&hl=en" target="_blank">Google Scholar</a>.</p>
+        <p>My latest publications are at <a href="https://scholar.google.com/citations?user=PIEw4UMAAAAJ&hl=en" target="_blank">Google Scholar</a>.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
