--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Yawen Zhang</h1>
+        <img src="figures/IMG_3223.JPG.jpg" alt="Yawen Zhang" style="width: 150px; height: auto;">
       </header>
       <section>
 
