--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </header>
       <section>
 
-        <p>I'm Yawen, a research scientist at <a href="https://mineral.ai/" target="_blank">Mineral.ai</a> (a project graduated from <a href="https://x.company/" target="_blank">Google X</a>). I'm excited to work on research problems at the intersection of AI and agriculture. I graduated with a Ph.D. in computer science from the <a href="https://www.colorado.edu/" target="_blank">University of Colorado Boulder</a>, where I was advised by <a href="https://home.cs.colorado.edu/~lv/" target="_blank">Qin Lv</a>.</p>
+        <p>I'm Yawen, a research scientist at <a href="https://mineral.ai/" target="_blank">Mineral.ai</a> (a project graduated from <a href="https://x.company/" target="_blank">Google X</a>). I'm excited to work on research problems at the intersection of AI and sustainability. I graduated with a Ph.D. in computer science from the <a href="https://www.colorado.edu/" target="_blank">University of Colorado Boulder</a>, where I was advised by <a href="https://home.cs.colorado.edu/~lv/" target="_blank">Qin Lv</a>.</p>
 
         <!-- <h2>Selected Publications</h2> -->
 
